--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Answer is in the javascript file</h1>
     <script src="index.js"></script>
 </body>
 </html>
